--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -47,3 +47,11 @@
 .termly-plans-group-row {
     margin-bottom: 1rem;
 }
+
+.termly-plans-es-and-os-section {
+    margin-bottom: 0.5rem;
+}
+
+.termly-plans-es-and-os-subsection {
+    margin-bottom: 0.25rem;
+}
