--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -68,7 +68,7 @@
 
         <div class="termly-plans-overview-section">
             <h4 class="termly-plans-overview-section-header">
-                Select Es & Os AND/OR Benchmarks which you intend to cover this term for @subject</h4>
+                Select the Es & Os and/or Benchmarks which you intend to cover this term for @subject</h4>
         </div>
 
         @if(maybeEsOsAndBenchmarks.isDefined) {
@@ -83,12 +83,18 @@
                 <div class="collapse" id="section_@sectionIndex">
                     <div class="card card-body">
                     @for((subjectSectionMap, subSectionIndex) <- esAndOsSectionMap._2.zipWithIndex) {
-                        <a class="btn btn-light termly-plans-es-and-os-subsection " data-toggle="collapse" href="#section_@{sectionIndex}_subsection_@subSectionIndex" role="button"
-                        aria-expanded="false" aria-controls="section_@{sectionIndex}_subsection_@subSectionIndex">
+                        <a class="btn btn-light termly-plans-es-and-os-subsection " data-toggle="collapse" href="#section_@{
+                            sectionIndex
+                        }_subsection_@subSectionIndex" role="button"
+                        aria-expanded="false" aria-controls="section_@{
+                            sectionIndex
+                        }_subsection_@subSectionIndex">
                         @subjectSectionMap._1
                         </a>
 
-                        <div class="collapse" id="section_@{sectionIndex}_subsection_@subSectionIndex">
+                        <div class="collapse" id="section_@{
+                            sectionIndex
+                        }_subsection_@subSectionIndex">
                             <div class="card card-body">
                                 @if(subjectSectionMap._2.auxiliaryText.nonEmpty) {
                                     <h6>@subjectSectionMap._2.auxiliaryText</h6>
@@ -101,11 +107,11 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                 @for(eAndO <- subjectSectionMap._2.eAndOs) {
-                                    <div class="row">
+                                    <div class="row termly-plans-es-and-os-code-and-eando-row termly-plans-eobenchmark-row">
                                         <div class="col-lg-3 termly-plans-es-and-os-code">
                                         @eAndO.code
                                         </div>
-                                        <div class="col-lg-9 termly-plans-es-and-os-content">
+                                        <div class="col-lg-9 termly-plans-es-and-os-content termly-plans-es-and-os-eando">
                                         @for(sentence <- eAndO.eAndOSentences) {
                                             <p>@sentence.value</p>
                                             @if(sentence.bulletPoints.nonEmpty) {
@@ -126,7 +132,7 @@
                                 </div>
                                 <div class="col-lg-6 termly-plans-es-and-os-content">
                                 @for(benchmark <- subjectSectionMap._2.benchmarks) {
-                                    <p>@benchmark.value</p>
+                                    <div class="termly-plans-es-and-os-benchmark termly-plans-eobenchmark-row">@benchmark.value</div>
                                 }
                                 </div>
                             </div>
@@ -151,4 +157,6 @@
 
 
     </div>
+
+    @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
