--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -67,8 +67,24 @@
 
 
         <div class="termly-plans-overview-section">
-            <h4 class="termly-plans-overview-section-header">
-                Select the Es & Os and/or Benchmarks which you intend to cover this term for @subject</h4>
+            <h5 class="termly-plans-overview-section-header text-center">
+                Select the Es & Os and/or Benchmarks to cover this term</h5>
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="inputSubject">Subject</label>
+                        <input type="text" class="form-control" id="inputSubject" placeholder="@subject" disabled="true">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputGroup">Group</label>
+                        <input type="text" class="form-control" id="inputGroup" placeholder="@groupDetails.groupName.name.capitalize" disabled="true">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputLevel">Curriculum Level</label>
+                        <input type="text" class="form-control" id="inputLevel" placeholder="@groupDetails.groupLevel.value.replace("Level", "")" disabled="true">
+                    </div>
+                </div>
+            </form>
         </div>
 
         @if(maybeEsOsAndBenchmarks.isDefined) {
@@ -155,6 +171,13 @@
             </div>
         }
 
+
+        <div class="row">
+            <div class="col-md-10"></div>
+            <div class="col-md-2">
+                <button id="save-termly-groups-button" type="button" class="btn btn-block btn-lg btn-primary">Save</button>
+            </div>
+        </div>
 
     </div>
 
