--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -125,7 +125,7 @@
                                 <div class="col-lg-6">
                                 @for(eAndO <- subjectSectionMap._2.eAndOs) {
                                     <div class="row termly-plans-es-and-os-code-and-eando-row termly-plans-eobenchmark-row"
-                                        data-eando-code="@eAndO.code">
+                                    data-eando-code="@eAndO.code">
                                         <div class="col-lg-3 termly-plans-es-and-os-code">
                                         @eAndO.code
                                         </div>
@@ -176,7 +176,11 @@
 
 
         <div class="row">
-            <div class="col-md-10"></div>
+            <div class="col-md-8"></div>
+            <div class="col-md-2">
+                <button id="clear-termly-groups-button" type="button" class="btn btn-block btn-lg btn-secondary">
+                    Clear</button>
+            </div>
             <div class="col-md-2">
                 <button id="save-termly-groups-button" type="button" class="btn btn-block btn-lg btn-primary">Save</button>
             </div>
