--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -188,5 +188,13 @@
 
     </div>
 
+
+    <script>
+            localStorage.setItem("classId", "@classDetails.id.id");
+            localStorage.setItem("subject", "@subject");
+            localStorage.setItem("groupId", "@groupDetails.groupId.id");
+    </script>
+
+
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
