--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -1,4 +1,4 @@
-@import controllers.serviceproxies.TimeToTeachUserId
+@import models.timetoteach.TimeToTeachUserId
 @import duplicate.model.ClassDetails
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classes: List[ClassDetails], schoolsForTeacher: List[models.timetoteach.School])
 
