--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -1,4 +1,4 @@
-@import controllers.serviceproxies.TimeToTeachUserId
+@import models.timetoteach.TimeToTeachUserId
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, teacherSchoolToClasses: Map[String, List[duplicate.model.ClassDetails]])
 
 @timetoteachAppMain(handler, s"Termly Plans",
