--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -193,6 +193,8 @@
             localStorage.setItem("classId", "@classDetails.id.id");
             localStorage.setItem("subject", "@subject");
             localStorage.setItem("groupId", "@groupDetails.groupId.id");
+            localStorage.setItem("schoolId", "@classDetails.schoolDetails.id");
+            localStorage.setItem("tttUserId", "@tttUserId.value");
     </script>
 
 
