--- a/server/app/views/planning/termly/termlyPlansForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForGroup.scala.html
@@ -125,7 +125,7 @@
                                 <div class="col-lg-6">
                                 @for(eAndO <- subjectSectionMap._2.eAndOs) {
                                     <div class="row termly-plans-es-and-os-code-and-eando-row termly-plans-eobenchmark-row"
-                                    data-eando-code="@eAndO.code">
+                                    data-curriculum-section="@esAndOsSectionMap._1" data-curriculum-subsection="@subjectSectionMap._1" data-eando-code="@eAndO.code">
                                         <div class="col-lg-3 termly-plans-es-and-os-code">
                                         @eAndO.code
                                         </div>
@@ -151,6 +151,7 @@
                                 <div class="col-lg-6 termly-plans-es-and-os-content">
                                 @for(benchmark <- subjectSectionMap._2.benchmarks) {
                                     <div class="termly-plans-es-and-os-benchmark termly-plans-eobenchmark-row"
+                                    data-curriculum-section="@esAndOsSectionMap._1" data-curriculum-subsection="@subjectSectionMap._1"
                                     data-benchmark="@benchmark.value">@benchmark.value</div>
                                 }
                                 </div>
