--- a/server/app/views/planning/termly/termlyPlansForClass.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClass.scala.html
@@ -110,7 +110,7 @@
                                     <div class="row termly-plans-group-row">
                                         <div class="col-lg-3">
                                             <a type="button" class="btn btn-info btn-sm btn-block"
-                                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForGroup(classDetails.id.id, group.groupType.value, group.groupId.id)">@group.groupName.name.capitalize</a>
+                                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyOverviewForGroup(classDetails.id.id, group.groupType.value, group.groupId.id)">@group.groupName.name.capitalize</a>
                                         </div>
                                         <div class="col-lg-1"></div>
                                         <div class="col-lg-3">
