--- a/server/app/views/planning/termly/termlyPlansOverviewForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForGroup.scala.html
@@ -68,16 +68,49 @@
 
 
         <div class="termly-plans-overview-section">
-            We have @subjectTermlyPlan.eAndOsWithBenchmarks.size Es And Os With Benchmarks
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="inputSubject">Subject</label>
+                        <input type="text" class="form-control" id="inputSubject" placeholder="@subject" disabled="true">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputGroup">Group</label>
+                        <input type="text" class="form-control" id="inputGroup" placeholder="@groupDetails.groupName.name.capitalize" disabled="true">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputLevel">Curriculum Level</label>
+                        <input type="text" class="form-control" id="inputLevel" placeholder="@groupDetails.groupLevel.value.replace("Level", "")" disabled="true">
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+
+        <div>
+            <div class="row text-center">
+                <div class="col-sm-6"><h4>Es & Os</h4></div>
+                <div class="col-sm-6"><h4>Benchmarks</h4></div>
+            </div>
+            @for(esOsWithBenchmarks <- subjectTermlyPlan.eAndOsWithBenchmarks) {
+                <div class="row es-os-benchmarks-overview-row">
+                    <div class="col-sm-6">
+                    @for(eAndOCode <- esOsWithBenchmarks.eAndOCodes) {
+                        <p>@eAndOCode</p>
+                    }
+                    </div>
+                    <div class="col-sm-6">
+                    @for(benchmark <- esOsWithBenchmarks.benchmarks) {
+                        <p>@benchmark</p>
+                    }
+                    </div>
+                </div>
+            }
         </div>
     </div>
 
-    <script>
-            localStorage.setItem("classId", "@classDetails.id.id");
-            localStorage.setItem("subject", "@subject");
-            localStorage.setItem("groupId", "@groupDetails.groupId.id");
-            localStorage.setItem("schoolId", "@classDetails.schoolDetails.id");
-            localStorage.setItem("tttUserId", "@tttUserId.value");
-    </script>
+
+    </div>
 
 }
