--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -71,7 +71,7 @@
 
                     <ul class="nav justify-content-end">
                         <li class="nav-item manage-class-nav-item-on-right">
-                            <button id="manage-class-edit" type="button" class="btn btn-info" disabled="true">
+                            <button id="manage-class-edit" type="button" class="btn btn-primary" disabled="true">
                                 Edit Class</button>
                         </li>
 
