--- a/server/app/views/planning/termly/termlyPlansForClass.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClass.scala.html
@@ -83,6 +83,7 @@
                     <div class="col-xs-3 col-lg-4">
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            <span><strong>0%</strong></span>
                         </div>
                     </div>
                     <div class="col-xs-3 col-lg-2"></div>
@@ -91,7 +92,8 @@
                             Share</button>
                     </div>
                 </div>
-                <div class="termly-plans-collapse-conatiner">
+
+                <div class="termly-plans-collapse-container">
                     <div class="collapse mx-auto" id="collapseClassGroup">
                         <div class="card card-body">
                             <div class="in-app-menu-medium-and-up">
